--- a/server/package.json
+++ b/server/package.json
@@ -6,17 +6,20 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "devStart": "nodemon server.js"
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
-    "mysql": "^2.18.1",
+    "helmet": "^6.0.0",
+    "knex": "^2.2.0",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.19",
-    "sql": "^0.78.0"
+    "pg": "^8.8.0"
   }
 }
