--- a/server/package.json
+++ b/server/package.json
@@ -12,14 +12,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "helmet": "^6.0.0",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^2.2.0",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.19",
+    "npm": "^8.19.0",
     "pg": "^8.8.0"
   }
 }
